﻿Ventile Launcher 
 - Added:
    Performance Mode (Setting)
    Animations
    Version Switcher
    Changelog

 - Removed:
    Custom Resource Pack Location

 - Fixes:
    Slightly Increased Performance